[pep8]
max_line_length = 200
ignore = E501,E265,E266,E722,E741,W605,E402


[pycodestyle]
exclude = .vscode,.pytest_cache/,__pycache__/,.env/,.eggs/,build/,dist/,ai.egg-info/,.venv/
max_line_length = 200 
ignore = E501,E265,E266,E722,E741,W605,E402
statistics = True

[metadata]
description-file = README.md